# hankpdf

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  versions.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docker.yml  release.yml  windows-jbig2enc.yml
docker/: Dockerfile  README.md  entrypoint.sh
docs/: ARCHITECTURE.md  INSTALL.md  KNOWLEDGE.md  NATIVE_DEPS.md  PERFORMANCE.md  ROADMAP.md  SPEC.md  SPIKE_REPORT.md  THREAT_MODEL.md  TROUBLESHOOTING.md
docs/superpowers/plans/: 2026-04-22-phase-2b-compression-boost.md  2026-04-23-dcr-wave-1-remediation.md  2026-04-23-per-page-parallelism.md  2026-04-25-pre-public-sweep.md  2026-04-27-per-page-selective-mrc.md  2026-05-02-v0.3.0-mega-release.md
docs/superpowers/specs/: 2026-04-25-pre-public-sweep-design.md  2026-04-27-per-page-selective-mrc-design.md  2026-05-02-v0.3.0-mega-release-design.md
hankpdf/: __init__.py  _environment.py  _limits.py  _pillow_hardening.py  _version.py  audit.py  exceptions.py  types.py
hankpdf/cli/: __init__.py  main.py  warning_codes.py
hankpdf/engine/: __init__.py  _render_safety.py  background.py  compose.py  foreground.py  image_export.py  mask.py  ocr.py  page_classifier.py  per_page_gate.py  rasterize.py  strategy.py  text_layer.py  triage.py  verifier.py
hankpdf/engine/codecs/: jbig2.py
hankpdf/sandbox/: __init__.py  _apply_unix.py  _apply_win32.py  platform_caps.py
hankpdf/utils/: atomic.py  log.py  text.py
hankpdf/verifier/: __init__.py
pdf_smasher/: __init__.py  _limits.py  _pillow_hardening.py  _version.py  audit.py  exceptions.py  image_export.py  types.py
pdf_smasher/cli/: __init__.py  main.py  warning_codes.py
pdf_smasher/engine/: __init__.py  _render_safety.py  background.py  canonical.py  chunking.py  compose.py  foreground.py  image_export.py  mask.py  ocr.py  page_classifier.py  rasterize.py  strategy.py  text_layer.py  triage.py  verifier.py
pdf_smasher/engine/codecs/: jbig2.py
pdf_smasher/utils/: __init__.py  atomic.py
scripts/: README.md  fetch_corpus.py  generate_bomb_corpus.py  generate_signed_corpus.py  install_jbig2_windows.ps1  make_smoke_fixture.py  measure_ratios.py  spike_mrc.py
scripts/generate_corpus/: README.md
tests/: STRATEGY.md  conftest.py
tests/corpus/: README.md  manifest.json
tests/integration/: test_boot_check.py  test_cli_atomic_writes.py  test_cli_chunking.py  test_cli_correlation_sidecar.py  test_cli_e2e.py  test_cli_image_export.py  test_cli_stale_chunks_quiet.py  test_cli_stderr_input_prefix.py  test_cli_timeouts.py  test_cli_verify_banner.py  test_cli_warning_codes.py  test_compress_api.py  test_compress_timeouts.py  test_correlation_id_cli.py  test_decompression_bombs.py  test_install_smoke.py  test_memory_caps.py  test_no_pdf_smasher_shim.py  test_parallel.py  test_ratio_gate.py  test_signed_pdf_handling.py  test_spike_pipeline.py
tests/unit/: test_atomic_nofollow.py  test_cli.py  test_cli_max_workers.py  test_cli_pages_spec.py  test_compress_per_page_gate.py  test_correlation_id.py  test_environment.py  test_exceptions.py  test_imports.py  test_input_size_limits.py  test_per_page_gate_module.py  test_pillow_cap_idempotent.py  test_pillow_hardening.py  test_platform_caps.py  test_platform_caps_win32.py  test_syntax_parseability.py  test_types.py  test_utils_log.py  test_utils_text.py  test_version.py
tests/unit/engine/: test_background.py  test_canonical_hash.py  test_chunking.py  test_color_detect.py  test_compose.py  test_compress_helpers.py  test_foreground.py  test_image_export.py  test_jbig2_codec.py  test_mask.py  test_native_text_extraction.py  test_ocr.py  test_ocr_timeout.py  test_page_classifier.py  test_password_plumbing.py  test_rasterize.py  test_render_safety.py  test_strategy.py  test_text_layer.py  test_triage.py  test_triage_canonical_oid.py  test_triage_depth_cap.py  test_verifier.py
